--- a/EntityFramwork/Areas/Admin/Views/Product/UpSert.cshtml
+++ b/EntityFramwork/Areas/Admin/Views/Product/UpSert.cshtml
@@ -67,6 +67,13 @@
                             <input type="file" name="file" class="form-control border-0 shadow" multiple />
                             <label asp-for="ImageUrl" class="ms-2"></label>
                         </div>
+                        <div class="form-floating py-2 col-12">
+                            <select asp-for="@Model.CategoryId" asp-items="ViewBag.CategoryDropDown" class="form-select border-0 shadow">
+                                <option disabled selected>--Select Category--</option>
+                            </select>
+                            <label asp-for="CategoryId" class="ms-2"></label>
+                            <span asp-validation-for="CategoryId" class="text-danger"></span>
+                        </div>
                         <div class="row pt-2">
                             <div class="col-6 col-md-3">
                                 @if (Model.Id != 0)
