--- a/EntityFramwork/Areas/Home/Views/Home/Index.cshtml
+++ b/EntityFramwork/Areas/Home/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@
                             </div>
                         </div>
                         <div>
-                            <a asp-action="Details"
+                            <a asp-action="Detail"
                                asp-route-productId="@product.Id"
                                class="btn btn-primary bg-gradient border-0 form-control">
                                 Details
