--- a/EntityFramwork/Views/Shared/_Layout.cshtml
+++ b/EntityFramwork/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Utility
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -15,7 +16,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">EntityFramwork</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
@@ -23,23 +24,25 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item"> 
-                            <a class="nav-link text-white" asp-area="Auth"  asp-controller="Auth" asp-action="Login">Login</a>
-                         </li>
+                        
 
-                       
-                        <div class="dropdown">
-                            <a class="btn bg-dark btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                                Content Mangement
-                            </a>
+                        @if(User.IsInRole(SD.Role_Admin))
+                        {
+                            <div class="dropdown">
+                                <a class="btn bg-dark btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Content Mangement
+                                </a>
 
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a></li>
-                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a></li>
-                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Student" asp-action="Index">Student</a></li>
-                            </ul>
-                            
-                        </div>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a></li>
+                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a></li>
+                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Student" asp-action="Index">Student</a></li>
+                                </ul>
+
+                            </div>
+                        }
+
+                        
                         @await Html.PartialAsync("_CartSummary")
                     </ul>
                     <partial name="_LoginPartial" />
