--- a/EntityFramwork/Areas/Identity/Pages/Account/Register.cshtml
+++ b/EntityFramwork/Areas/Identity/Pages/Account/Register.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post" enctype="multipart/form-data" >
             <h2>Create a new account.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
@@ -26,6 +26,10 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+            </div>
+            <div class="form-floating py-2 col-12">
+                <input asp-for="Input.ProfileImage" type="file" class="form-control border-0 shadow" />
+                <label asp-for="Input.ProfileImage" class="ms-2"></label>
             </div>
             <div class="form-floating mb-3">
                 <select asp-for="Input.Role" asp-items="@Model.Input.Roles" class="form-select" aria-required="true">
